# nikon-fleet

./: .gitignore  AGENT-README.md  Cargo.toml  Makefile
docs/: firmware-archive-spec.md  nx-field-session-2026-07-09.md  ptpip-capture-notes.md  ptpip-capture-plan-2026-07-10.md  racemonitor-api-notes.md  racemonitor-live-timing-session-2026-07-10.md  racemonitor-live-timing-session-2026-07-18.md  rpi-ap-capture-setup.md  todo.md
examples/: dump_ranges.rs  dump_schema.rs  load_sdk.rs  sdk_probe.rs
gui/: Cargo.toml  fleet_gui.py  fleet_lib.py  test_fleet_lib.py
gui/src/: main.rs
scripts/: rpi-ap-setup.sh  setup-sdk-runtime.ps1  setup-sdk-runtime.sh
src/: diff.rs  firmware.rs  lib.rs  maid_layer.rs  main.rs  range_value.rs  sdk.rs  snapshot.rs
