[package]
name = "nikon-fleet"
version = "0.1.0"
edition = "2024"
description = "Fleet-wide settings management for Nikon Z cameras"

[dependencies]
# CLI parsing — derive-style, very ergonomic
clap = { version = "4", features = ["derive"] }

# JSON serialization for snapshots
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling. Two crates that play different roles:
#   anyhow:    great for application code; "any error" with context chaining.
#   thiserror: great for library code; lets you define your own error enums.
# We'll mostly use anyhow at the boundary and thiserror in the parser modules.
anyhow = "1"
thiserror = "2"

# Timestamps on snapshots
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }

# Dynamic library loading. The Nikon SDK is a CFBundle containing a regular
# Mach-O dylib; libloading wraps dlopen/dlsym safely (within FFI's limits).
libloading = "0.8"

# libc gives us size_t and malloc/free for the SDK's allocator callbacks.
libc = "0.2"

# USB device access: read bcdDevice (firmware version) and iSerialNumber from
# the USB descriptor, and reset cameras so the SDK's IOKit notifications fire.
rusb = "0.9"

# SHA-256 hashing for firmware archive integrity checks.
sha2 = "0.10"

[dev-dependencies]
# Nicer assertion output for tests
pretty_assertions = "1"
# Temporary directories for firmware tests
tempfile = "3"
