[package]
name = "fleet-gui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fleet-gui"
path = "src/main.rs"

[dependencies]
eframe = "0.29"
nikon-fleet = { path = ".." }
dirs = "5"
rfd = "0.17"
zip = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
